# blood-bank-agent

./: .env.example  README.md  app.py  baseline.py  environment.py  inference.py  openenv.yaml  pyproject.toml
Downloads/blood-bank-agent-main (2)/blood-bank-agent-main/: Dockerfile  app.py  baseline.py  requirements.txt
Downloads/blood-bank-agent-main/blood-bank-agent-main/server/: app.py
server/: app.py
